retrieved the content on the server-side, have to put it to the visualization on the front end

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		Bell the octocat
 	</title>
 	<script type="text/javascript">
-		data = '{{load | safe}}'
-		document.getElementById('mydivtag').innerHTML = JSON.parse(data)
+		var content = '{{content}}';
+		//document.getElementById('data').innerHTML = JSON.parse(data)
 	</script>
 </head>
 <body>
